--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "grunt-contrib-sass": "~0.6.0",
     "grunt-contrib-cssmin": "~0.6.2",
     "grunt-contrib-watch": "~0.5.2",
+    "grunt-contrib-copy": "0.5.0",
     "load-grunt-tasks": "~0.1.0"
   }
 }
