--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "applepie",
-  "version": "0.1.0",
+  "version": "0.1.0-rc.1",
   "repository": {
     "type" : "git",
     "url" : "git@github.com:alchapone/applepie.git"
