--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "applepie",
   "version": "0.1.0-rc.1",
+  "homepage": "http://apppie.org",
+  "author": "Railsware, Alex Chaplinsky",
   "repository": {
     "type" : "git",
     "url" : "git@github.com:alchapone/applepie.git"
@@ -9,12 +11,18 @@
     "url" : "https://github.com/alchapone/applepie/issues",
     "email" : "alchapone@yandex.ru"
   },
+  "license": {
+    "type": "MIT",
+    "url": "https://github.com/alchapone/applepie/blob/master/LICENSE"
+  },
   "devDependencies": {
     "grunt": "~0.4.2",
+    "grunt-banner": "~0.2.2",
     "grunt-contrib-sass": "~0.6.0",
     "grunt-contrib-cssmin": "~0.6.2",
     "grunt-contrib-watch": "~0.5.2",
     "grunt-contrib-copy": "0.5.0",
+    "grunt-contrib-compress": "~0.5.3",
     "load-grunt-tasks": "~0.1.0"
   }
 }
