--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt-contrib-watch": "~0.5.2",
     "grunt-contrib-copy": "0.5.0",
     "grunt-contrib-compress": "~0.5.3",
+    "grunt-contrib-clean": "~0.4.1",
     "load-grunt-tasks": "~0.1.0"
   }
 }
