--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "bugs": {
     "url" : "https://github.com/railsware/applepie/issues",
-    "email" : "alchapone@yandex.ru"
+    "email" : "alchaplinsky@gmail.com"
   },
   "license": {
     "type": "MIT",
